--- a/public/scss/partials/_base.scss
+++ b/public/scss/partials/_base.scss
@@ -37,3 +37,9 @@ header {
   padding: 0 0 0 20px;
   text-transform: capitalize;
 }
+
+.container {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
